<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.worshipsound.fragments.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.worshipsound.fragments.SearchFragment"
        android:label="@string/navigation_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_playlist"
        android:name="com.example.worshipsound.fragments.PlaylistFragment"
        android:label="@string/navigation_playlist"
        tools:layout="@layout/fragment_playlist" />

</navigation>
